# stockfish-mcp

./: .env  .env.example  .gitignore  LICENSE  README.md  common.py  games.py  main.py  pyproject.toml  redis_actions.py  requirements.txt  stockfish_server.py
src/: __init__.py  server.py
src/database/: __init__.py  redis_client.py  repository.py
src/models/: __init__.py  game.py
