[project]
name = "stockfish-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "chess==1.11.2",
    "click==8.2.1",
    "dotenv==0.9.9",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "idna==3.10",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "markdown-it-py==3.0.0",
    "mcp==1.12.4",
    "mdurl==0.1.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "python-chess==1.999",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "redis==6.4.0",
    "referencing==0.36.2",
    "rich==14.1.0",
    "rpds-py==0.27.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sse-starlette==3.0.2",
    "starlette==0.47.2",
    "stockfish==3.28.0",
    "typer==0.16.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "uvicorn==0.35.0",
]
